# CardExtractor

./: .gitignore  README.md  add_border.py  card_constants.py  card_to_name.txt  extract_card.py  extract_cards.py  pil_testing.py  polynomial_fitters.py  process_cards.py  pyproject.toml  r2_extract_card.py  requirements.txt  split_pdf_to_images.py
img_src_r2/: card_corners.json
