[tool.poetry]
name = "cardextractor"
version = "0.1.0"
description = ""
authors = ["Håkon Østerbø <hauk88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pdf2image = "^1.17.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
